added input grid